--- a/src/pages/Audio/Audio.module.css
+++ b/src/pages/Audio/Audio.module.css
@@ -60,6 +60,7 @@
     margin-top: 120px;
     box-sizing: border-box;
     overflow-y: auto;
+    padding-bottom: 160px;
 }
 
 .thxWrapper {
@@ -112,7 +113,7 @@
 .h2 {
     font-size: 36px;
     margin-bottom: 0;
-    margin-top: 0;
+    margin-top: 20px;
     padding: 50px;
     text-align: center;
     box-shadow: 0 0 15px rgba(72, 187, 255, 1), 0 0 30px rgba(72, 187, 255, 0.8), 0 0 45px rgba(72, 187, 255, 0.6), inset 0 0 10px rgba(255, 255, 255, 0.3);
@@ -465,6 +466,7 @@
 
 .container {
   padding: 20px;
+  padding-top: 120px;
 }
 .step {
   display: none;
@@ -475,4 +477,19 @@
   display: block;
   opacity: 1;
   transition: 0.3s all;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 10px rgba(72, 187, 255, 0.1), 0 0 20px rgba(72, 187, 255, 0.05);
+  background: #161b22;
+  display: flex;
+  border-top: 2px solid #1c3240;
+  flex-direction: column;
+  gap:10px;
+  align-items: center;
+  justify-content: center;
 }
