--- a/assets/index-DqQ1EqF6.css
+++ b/assets/index-DqQ1EqF6.css
@@ -179,7 +179,7 @@ body {
     0 0 10px rgba(72, 187, 255, 0.1),
     0 0 20px rgba(72, 187, 255, 0.05);
 }
-@keyframes _neon-flicker_323pk_1 {
+@keyframes _neon-flicker_hojuq_1 {
       0% {
         text-shadow: 
           0 0 3px #48bbff,
@@ -203,7 +203,7 @@ body {
       }
     }
 
-@keyframes _fadeIn_323pk_43 {
+@keyframes _fadeIn_hojuq_43 {
   from {
     opacity: 0;
   }
@@ -212,7 +212,7 @@ body {
   }
 }
 
-@keyframes _fadeOut_323pk_47 {
+@keyframes _fadeOut_hojuq_47 {
   from {
     opacity: 1;
   }
@@ -221,15 +221,15 @@ body {
   }
 }
 
-._fadeIn_323pk_43 {
-  animation: _fadeIn_323pk_43 500ms forwards;
+._fadeIn_hojuq_43 {
+  animation: _fadeIn_hojuq_43 500ms forwards;
 }
 
-._fadeOut_323pk_47 {
-  animation: _fadeOut_323pk_47 500ms forwards;
+._fadeOut_hojuq_47 {
+  animation: _fadeOut_hojuq_47 500ms forwards;
 }
 
-._wrapper_323pk_51, ._thxWrapper_323pk_51 {
+._wrapper_hojuq_51, ._thxWrapper_hojuq_51 {
     min-height: calc(100svh - 106px);
     width: 100%;
     display: flex;
@@ -244,7 +244,7 @@ body {
     padding-bottom: 160px;
 }
 
-._thxWrapper_323pk_51 {
+._thxWrapper_hojuq_51 {
   margin-top: 0;
   display: none;
   position: fixed;
@@ -255,11 +255,11 @@ body {
   left: 0;
   z-index: 1000000;
 }
-._displayFlex_323pk_77 {
+._displayFlex_hojuq_77 {
   display: flex;
   opacity: 1;
 }
-._h1_323pk_81 {
+._h1_hojuq_81 {
     font-size: 32px;
     margin-bottom: 70px;
     margin-top: 70px;
@@ -287,11 +287,11 @@ body {
       transition: text-shadow 0.3s ease-in-out;
 } */
 
-._h1_323pk_81 span {
+._h1_hojuq_81 span {
   color: rgba(72, 187, 255, 1);
 }
 
-._h2_323pk_113 {
+._h2_hojuq_113 {
     font-size: 36px;
     margin-bottom: 0;
     margin-top: 20px;
@@ -311,7 +311,7 @@ body {
 }
 
 
-._h3_323pk_133 {
+._h3_hojuq_133 {
     transition: 0.3s;
     font-size: 28px;
     margin-top: 0;
@@ -322,11 +322,11 @@ body {
     color: white;
     background: #1f2937;
 }
-._randomize_323pk_144 {
+._randomize_hojuq_144 {
     cursor: pointer;
 }
 
-._text_323pk_148, ._thxText_323pk_148 {
+._text_hojuq_148, ._thxText_hojuq_148 {
     color: white;
     margin: 0 0 20px;
     max-width: 800px;
@@ -335,11 +335,11 @@ body {
     text-align: center;
 }
 
-._thxText_323pk_148 {
+._thxText_hojuq_148 {
   font-size: 28px;
 }
 
-._input_323pk_161[type="number"] {
+._input_hojuq_161[type="number"] {
       width: 70px;
       text-align: center;
       padding: 10px 15px;
@@ -355,7 +355,7 @@ body {
       transition: box-shadow 0.3s, border-color 0.3s;
     }
 
-._input_323pk_161[type="number"]:focus {
+._input_hojuq_161[type="number"]:focus {
     border-color: #ffffff;
     box-shadow: 
     0 0 15px rgba(72, 187, 255, 1),
@@ -405,7 +405,7 @@ body {
       box-shadow: 0 0 10px rgba(72, 187, 255, 1);
       cursor: pointer;
     } */
-._input_323pk_161[type="range"] {
+._input_hojuq_161[type="range"] {
     cursor: pointer;
     width: 100%;
     /* margin-top: 20px; */
@@ -418,12 +418,12 @@ body {
     z-index: 1000;
 }
 
-._theme_323pk_240 {
+._theme_hojuq_240 {
     color: white;
     font-size: 24px;
 }
 
-._select_323pk_245 {
+._select_hojuq_245 {
       width: 700px;
       max-width: 100%;
       padding: 10px 15px;
@@ -447,19 +447,19 @@ body {
       margin: 20px 0;
     }
 
-._select_323pk_245:hover {
+._select_hojuq_245:hover {
     border-color: #ffffff;
     box-shadow: 
     0 0 15px rgba(72, 187, 255, 1),
     inset 0 0 8px rgba(255, 255, 255, 0.3);
 }
 
-._select_323pk_245 option {
+._select_hojuq_245 option {
     background: #1f2937;
     color: #d1d5db;
 }
 
-._select_323pk_245:focus {
+._select_hojuq_245:focus {
     border-color: #ffffff;
     box-shadow: 
     0 0 15px rgba(72, 187, 255, 1),
@@ -467,20 +467,20 @@ body {
 }
 
 @media (max-width: 768px) {
-    ._h1_323pk_81 {
+    ._h1_hojuq_81 {
         font-size: 24px;
         text-align: center;
         margin: 40px 0;
     }
-    ._h2_323pk_113 {
+    ._h2_hojuq_113 {
         font-size: 28px;
         padding: 20px;
     }
-    ._h3_323pk_133 {
+    ._h3_hojuq_133 {
         font-size: 16px;
         margin-bottom: 30px;
     }
-    ._select_323pk_245 {
+    ._select_hojuq_245 {
         font-size: 18px;
     }
 }
@@ -530,7 +530,7 @@ body {
         inset 0 0 10px rgba(255, 255, 255, 0.3);
     } */
 
-    ._defenition_323pk_307 {
+    ._defenition_hojuq_307 {
       max-width: 400px;
       padding: 15px 20px;
       border-radius: 10px;
@@ -543,13 +543,13 @@ body {
       position: relative;
     }
 
-._buttons_323pk_365 {
+._buttons_hojuq_365 {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-._shuffleButton_323pk_371 {
+._shuffleButton_hojuq_371 {
   margin-top: 20px;
   position: relative;
   padding: 10px 20px;
@@ -588,14 +588,14 @@ body {
     inset 0 0 8px rgba(255, 255, 255, 0.2);
 } */
 
-._shuffle-button_323pk_400:hover {
+._shuffle-button_hojuq_400:hover {
   box-shadow: 
     0 0 8px rgba(72, 187, 255, 0.5),
     0 0 15px rgba(72, 187, 255, 0.3),
     inset 0 0 5px rgba(255, 255, 255, 0.1);
 }
 
-._shuffle-button_323pk_400._active_323pk_400:hover {
+._shuffle-button_hojuq_400._active_hojuq_400:hover {
   box-shadow: 
     0 0 15px rgba(72, 187, 255, 1),
     0 0 25px rgba(72, 187, 255, 0.8),
@@ -603,7 +603,7 @@ body {
     inset 0 0 10px rgba(255, 255, 255, 0.3);
 }
 
-._theme_323pk_240 {
+._theme_hojuq_240 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -611,7 +611,7 @@ body {
   max-width: 100%;
 }
 
-._donat_323pk_433 {
+._donat_hojuq_433 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -629,7 +629,7 @@ body {
   border: none;
 }
 
-._secret_323pk_451 {
+._secret_hojuq_451 {
   background: transparent;
   width: 35px;
   height: 35px;
@@ -638,29 +638,29 @@ body {
   right: 0px;
 }
 
-._btnWrapper_323pk_460 {
+._btnWrapper_hojuq_460 {
   display: flex;
   gap: 10px;
   align-items: center;
   justify-content: center;
 }
 
-._container_323pk_467 {
+._container_hojuq_467 {
   padding: 20px;
   padding-top: 120px;
 }
-._step_323pk_471 {
+._step_hojuq_471 {
   display: none;
   opacity: 0;
 }
 
-._show_323pk_476 {
+._show_hojuq_476 {
   display: block;
   opacity: 1;
   transition: 0.3s all;
 }
 
-._footer_323pk_482 {
+._footer_hojuq_482 {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -673,6 +673,14 @@ body {
   gap:10px;
   align-items: center;
   justify-content: center;
+}
+._autoplay_hojuq_496 {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  margin-bottom: 15px;
 }._button_k543b_1 {
     border-radius: 29px;
     padding: 0 30px;
