--- a/src/pages/Audio/Audio.module.css
+++ b/src/pages/Audio/Audio.module.css
@@ -493,3 +493,11 @@
   align-items: center;
   justify-content: center;
 }
+.autoplay {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  margin-bottom: 15px;
+}
